fix: :zap: overflow
adicionei overflow no html com 700 px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -389,6 +389,10 @@ li {
 }
 
 @media(max-width: 700px) {
+    html{
+        overflow-x: hidden;
+    }
+   
     .container-header button {
         margin-right: 20px;
     }
@@ -399,7 +403,6 @@ li {
 }
  @media(max-width: 480px){
   html {
-    overflow-x: hidden;
     }
  }
 
